Added header and more styles

--- a/home.html
+++ b/home.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <header>
-
+  <header id="header">
+<h1 id="MQ">Movie & Game Quize</h1> 
   </header>
   <div class="Navbar">
     <ul style="list-style: none;">
@@ -28,7 +28,7 @@
 </div>
  </div>
   <footer id="footer">
-      
+
  </footer>
 
 </body>
