--- a/Rule page.html
+++ b/Rule page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <title>My Quize </title>
+     <title>My Quiz </title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +9,10 @@
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
-<body>
-  
+<body id="Background1">
+  <header id="header2">
+    <h1 id="MQ2">The Rules</h1> 
+      </header>
   <div class="Navbar">
     <ul style="list-style: none;">
        <li><a href="Home.html">Home</a> </li>
@@ -18,6 +20,22 @@
         </ul>
       </div>
 
+
+      <section id="Notes">
+<div class="container">
+  <p class="bootNote">
+    A knowledge game to test the brain, how well do you know your movies and games?. well if you know come & play our quize game and, see
+    if your knowledge is up to date.  
+         </p>
+         <br><br>
+     <p class="bookNotes">
+The rules of quize is to match the corrects answers with the corects questions that are given. 
+Every time you move up a level the questions will get more harder and harder. The quize will have a 
+rang of different movies ranging from horrors, romace, anction, comics and musicals. will also have different ranges 
+of games from PC, Xbox, Ps and more.
+     </p>
+    </div>
+      </section>
 
       <div id="container">
         <div id="main">
