--- a/Rule page.html
+++ b/Rule page.html
@@ -20,7 +20,7 @@
         </ul>
       </div>
 
-
+      
       <section id="Notes">
 <div class="container">
   <p class="bootNote">
@@ -29,20 +29,24 @@
          </p>
          <br><br>
      <p class="bookNotes">
-The rules of quize is to match the corrects answers with the corects questions that are given. 
+The rules of quiz is to match the corrects answers with the corects questions that are given. 
 Every time you move up a level the questions will get more harder and harder. The quize will have a 
 rang of different movies ranging from horrors, romace, anction, comics and musicals. will also have different ranges 
-of games from PC, Xbox, Ps and more.
+of games and consoles from PC, Xbox, Ps and more.
      </p>
     </div>
       </section>
+
 
       <div id="container">
         <div id="main">
         </div>
          </div>
           <footer id="footer">
-              
+            <p>Game: maker John Gibbs 
+              <br>
+              Email: J.gibbs98@hotmail.com
+            </p>
          </footer> 
 
 </body>
