--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <title>My Quize </title>
+     <title>My Quiz </title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +9,9 @@
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
-<body>
+<body id="Background2">
   <header id="header">
-<h1 id="MQ">Movie & Game Quize</h1> 
+<h1 id="MQ">Movie & Game Quiz</h1> 
   </header>
   <div class="Navbar">
     <ul style="list-style: none;">
@@ -28,7 +28,10 @@
 </div>
  </div>
   <footer id="footer">
-
+<p>Game: maker John Gibbs 
+  <br>
+  Email: J.gibbs98@hotmail.com
+</p>
  </footer>
 
 </body>
