--- a/Rule page.html
+++ b/Rule page.html
@@ -29,9 +29,9 @@
          </p>
          <br><br>
      <p class="bookNotes">
-The rules of quiz is to match the corrects answers with the corects questions that are given. 
+The rules of quiz is to match the corrects answers with the correct questions that are given. 
 Every time you move up a level the questions will get more harder and harder. The quize will have a 
-rang of different movies ranging from horrors, romace, anction, comics and musicals. will also have different ranges 
+rang of different movies ranging from horrors, romace, anction, comics. will also have different ranges 
 of games and consoles from PC, Xbox, Ps and more.
      </p>
     </div>
