--- a/Rule page.html
+++ b/Rule page.html
@@ -28,6 +28,7 @@
     if your knowledge is up to date.  
          </p>
          <br><br>
+         <h2 id="H2">How to Play</h2>
      <p class="bookNotes">
 The rules of quiz is to match the corrects answers with the correct questions that are given. 
 Every time you move up a level the questions will get more harder and harder. The quize will have a 
