--- a/home.html
+++ b/home.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-     <title>My Quiz </title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>My PortFolio</title>
+     <title> My Quiz</title>
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
@@ -16,7 +15,7 @@
   <div class="Navbar">
     <ul style="list-style: none;">
        <li><a href="home.html">Home</a> </li>
-        <li><a href="Rule page.html">Rules</a></li>
+       <li><a href="Rule page.html">Rules</a></li>
         </ul>
       </div>
 
@@ -24,14 +23,14 @@
     <div id="quiz-container">
         <!-- question container -->
         <div class="questions">
-            <h2 id="question"></h2>
+            <h2 id="question">H</h2>
             <ol type="A">
                 <li class="option"><span id="option0" onclick="calcScore(this)"></span></li>
                 <li class="option"><span id="option1" onclick="calcScore(this)"></span></li>
                 <li class="option"><span id="option2" onclick="calcScore(this)"></span></li>
                 <li class="option"><span id="option3" onclick="calcScore(this)"></span></li>
             </ol>
-            <h4 id="stat"></h4>
+            <h4 id="stat">H</h4>
         </div>
 
         <div class="buttons">
@@ -42,9 +41,8 @@
 
     <!-- scoreboard section -->
     <div id="scoreboard">
-        <img src="/logo.png" alt="">
         <h2 id="score-title">Your Score</h2>
-        <h2 id="score"></h2>
+        <h2 id="score">H</h2>
         <button type="button" id="score-btn" onclick="backToQuiz()">Back to Quiz</button>
         <button type="button" id="check-answer" onclick="checkAnswer()">Check Answers</button>
     </div>
@@ -55,7 +53,7 @@
         <ol type="1" id="answers">
 
         </ol>
-        <button type="button" id="score-btn" onclick="backToQuiz()">Back to Quiz</button>
+        <button type="button" class="score-btn" onclick="backToQuiz()">Back to Quiz</button>
     </div>
 
     <!-- javascript file source -->
